--- a/driver-mobile/android/app/src/main/res/values/colors.xml
+++ b/driver-mobile/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <resources>
-  <color name="splashscreen_background">#8D1B3D</color>
-  <color name="iconBackground">#8D1B3D</color>
-  <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#8D1B3D</color>
-  <color name="notification_icon_color">#C9A227</color>
+  <color name="splashscreen_background">#FFFFFF</color>
 </resources>
